# scholar-mcp

./: .gitignore  README.md  async_searcher.py  cache.py  citation_graph.py  downloader.py  install.py  logger.py  pdf_reader.py  pyproject.toml  recommender.py  requirements.txt  scholar_mcp_server.py  searcher.py  translator.py
.github/workflows/: test.yml
tests/: conftest.py  test_cache.py  test_citation_graph.py  test_downloader.py  test_install.py  test_pdf_reader.py  test_recommender.py  test_searcher.py  test_server.py  test_translator.py
